Update Preprocessing Deep Learning Input from RNA String.ipynb

--- a/tutorials/Preprocessing Deep Learning Input from RNA String.ipynb
+++ b/tutorials/Preprocessing Deep Learning Input from RNA String.ipynb
@@ -187,19 +187,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CapR\t\t\t\t\t  contrafold-se\r\n",
-      "RNAstructureLinuxTextInterfaces64bit.tgz  draw_rna_pkg\r\n",
-      "arnie\t\t\t\t\t  viennarna_2.4.15-1_amd64.deb\r\n",
-      "bpps\r\n",
-      "Collecting pip\r\n",
-      "  Downloading pip-22.0.3-py3-none-any.whl (2.1 MB)\r\n",
-      "\u001b[K     |████████████████████████████████| 2.1 MB 594 kB/s \r\n",
-      "\u001b[?25hInstalling collected packages: pip\r\n",
-      "  Attempting uninstall: pip\r\n",
-      "    Found existing installation: pip 20.2.2\r\n",
-      "    Uninstalling pip-20.2.2:\r\n",
-      "      Successfully uninstalled pip-20.2.2\r\n",
-      "Successfully installed pip-22.0.3\r\n"
      ]
     }
    ],
@@ -257,7 +244,7 @@
       "\r\n",
       "\r\n",
       "\r\n",
-      "Note, selecting 'viennarna' instead of '/kaggle/input/rna-data-preprocessing-toolkits/viennarna_2.4.15-1_amd64.deb'\r\n",
+      "Note, selecting 'viennarna' instead of '/kaggle/input/rna-data-preprocessing-toolkits/viennarna_2.4.15-1_amd64.deb'\r\n"
      ]
     }
    ],
